# football-cups

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: competition-formats.json  research-competition-profiles.json  research-europe-guardrail.json  research-k1-analysis-presentation.json  research-k1-analysis-workflow.json  research-k1-guardrail.json  research-model-competition-map.json
docs/: 500-collector-spec.md  cloud-migration-plan.md  collector-runbook.md  data-source-evaluation.md  database-design.md  database-runbook.md  decision-log.md  execution-plan.md  historical-research-statistics.md  k1-anti-harvest-design.md  product-plan.md  project-status.md  research-data-acquisition-plan.md
scripts/: __init__.py
scripts/linux/: bootstrap-smoke.sh  football-cups-collector.service  football-cups-collector.timer  football-cups-db-import.service  football-cups-db-import.timer  install-postgresql.sh  install-systemd.sh  prepare-data-disk.sh  verify-oss-roundtrip.sh
scripts/research/: __init__.py  normalize_oddsharvester_sample.py  patch_oddsharvester_centroquote.py
scripts/windows/: configure_database_task_user.ps1  configure_local_backup.ps1  install_backup_tasks.ps1  install_collector_task.ps1  (+6 more)
tests/: test_collector_backup_cli.py  test_collector_discovery.py  test_collector_health.py  test_collector_markets_reporting.py  test_collector_results.py  test_collector_storage_state.py  test_database_importer.py  test_europe_guardrail.py  test_k1_guardrail.py  test_k1_history_context.py  test_linux_deployment_files.py  test_market_reparse.py  test_normalize_oddsharvester_sample.py  test_package_resolution.py  test_research_competition_profiles.py  test_research_pipeline.py  test_sporttery_results.py  test_windows_backup_files.py
(+53 files in other folders)
