[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "football-cups"
version = "0.1.0"
description = "Append-only 500.com Sporttery football market collector"
requires-python = ">=3.11"
dependencies = [
  "lxml>=5.0",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "psutil>=6.0",
  "psycopg[binary]>=3.2,<4",
  "requests>=2.31",
  "xlrd>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
browser = ["playwright>=1.45"]

[project.scripts]
football-cups-collector = "football_cups.collector.cli:main"
football-cups-db = "football_cups.database.cli:main"
football-cups-research = "football_cups.research.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"football_cups.database" = ["migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --basetemp=data/test-tmp"
pythonpath = [".", "src"]
